--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LMS SMA - Dashboard</title>
-  <link rel="stylesheet" href="dashboard/dashboard.css">
+  <link rel="stylesheet" href="dashboard.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -148,8 +148,8 @@
       <div class="settings-item">Keluar dari akun</div>
     </section>
   </main>
-  <script src="dashboard/dashboard.js"></script>
-  <script src="../jquery-3.6.0.min.js"></script>
-  <script src="../sidebar-toggle.js"></script>
+  <script src="dashboard.js"></script>
+  <script src="jquery-3.6.0.min.js"></script>
+  <script src="sidebar-toggle.js"></script>
 </body>
 </html>
