--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h2>LMS SMA</h2>
     <ul>
       <li><a href="../dashboard/dashboard.html" class="active" onclick="showSection('dashboard')">Dashboard</a></li>
-      <li><a href="../mataPelajaran/matapelajaran.html" onclick="showSection('subjects')">Mata Pelajaran</a></li>
-      <li><a href="../tugas/tugas.html" onclick="showSection('tasks')">Tugas</a></li>
+      <li><a href="matapelajaran.html" onclick="showSection('subjects')">Mata Pelajaran</a></li>
+      <li><a href="tugas.html" onclick="showSection('tasks')">Tugas</a></li>
       <li><a href="../jadwal/jadwal.html" onclick="showSection('schedule')">Jadwal</a></li>
       <li><a href="../notifikasi/notifikasi.html" onclick="showSection('notifications')">Notifikasi</a></li>
       <li><a href="../pengaturan/pengaturan.html" onclick="showSection('settings')">Pengaturan</a></li>
