--- a/matapelajaran.html
+++ b/matapelajaran.html
@@ -12,9 +12,9 @@
   <aside class="sidebar">
     <h2>LMS SMA</h2>
     <ul>
-      <li><a href="../dashboard/dashboard.html">Dashboard</a></li>
-      <li><a href="../mataPelajaran/matapelajaran.html" class="active">Mata Pelajaran</a></li>
-      <li><a href="../tugas/tugas.html">Tugas</a></li>
+      <li><a href="dashboard.html">Dashboard</a></li>
+      <li><a href="matapelajaran.html" class="active">Mata Pelajaran</a></li>
+      <li><a href="tugas.html">Tugas</a></li>
       <li><a href="../jadwal/jadwal.html">Jadwal</a></li>
       <li><a href="../notifikasi/notifikasi.html">Notifikasi</a></li>
       <li><a href="../pengaturan/pengaturan.html">Pengaturan</a></li>
