--- a/matapelajaran.html
+++ b/matapelajaran.html
@@ -15,9 +15,9 @@
       <li><a href="dashboard.html">Dashboard</a></li>
       <li><a href="matapelajaran.html" class="active">Mata Pelajaran</a></li>
       <li><a href="tugas.html">Tugas</a></li>
-      <li><a href="../jadwal/jadwal.html">Jadwal</a></li>
-      <li><a href="../notifikasi/notifikasi.html">Notifikasi</a></li>
-      <li><a href="../pengaturan/pengaturan.html">Pengaturan</a></li>
+      <li><a href="jadwal.html">Jadwal</a></li>
+      <li><a href="notifikasi.html">Notifikasi</a></li>
+      <li><a href="pengaturan.html">Pengaturan</a></li>
     </ul>
   </aside>
 
