--- a/jadwal.html
+++ b/jadwal.html
@@ -11,12 +11,12 @@
   <aside class="sidebar">
     <h2>LMS SMA</h2>
     <ul>
-      <li><a href="../dashboard/dashboard.html">Dashboard</a></li>
-      <li><a href="../mataPelajaran/matapelajaran.html">Mata Pelajaran</a></li>
-      <li><a href="../tugas/tugas.html">Tugas</a></li>
-      <li><a href="../jadwal/jadwal.html" class="active">Jadwal</a></li>
-      <li><a href="../notifikasi/notifikasi.html">Notifikasi</a></li>
-      <li><a href="../pengaturan/pengaturan.html">Pengaturan</a></li>
+      <li><a href="dashboard.html">Dashboard</a></li>
+      <li><a href="matapelajaran.html" class="active">Mata Pelajaran</a></li>
+      <li><a href="tugas.html">Tugas</a></li>
+      <li><a href="jadwal.html">Jadwal</a></li>
+      <li><a href="notifikasi.html">Notifikasi</a></li>
+      <li><a href="pengaturan.html">Pengaturan</a></li>
     </ul>
   </aside>
 
