--- a/matapelajaran.html
+++ b/matapelajaran.html
@@ -42,7 +42,7 @@
             <span><i class="fa-solid fa-tasks"></i> 2 Tugas</span>
             <span><i class="fa-solid fa-star"></i> Nilai: 85</span>
           </div>
-          <a href="../detail mata pelajaran/detailmatematika.html"> <button class="detail-btn">Lihat Detail</button></a>
+          <a href="detailmatematika.html"> <button class="detail-btn">Lihat Detail</button></a>
         </div>
         <div class="subject-card">
           <strong>Bahasa Indonesia</strong>
@@ -51,7 +51,7 @@
             <span><i class="fa-solid fa-tasks"></i> 1 Tugas</span>
             <span><i class="fa-solid fa-star"></i> Nilai: 90</span>
           </div>
-          <a href="../detail mata pelajaran/detailBIndo.html"> <button class="detail-btn">Lihat Detail</button></a>
+          <a href="detailBIndo.html"> <button class="detail-btn">Lihat Detail</button></a>
         </div>
         <div class="subject-card">
           <strong>Kimia</strong>
